[package]
name = "pasoqa3"
version = "0.0.1"
edition = "2021"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
description = "Parse and summarize the match summary from Quake 3 logs"
license = "MIT"
repository = "https://github.com/marcospb19/pasoqa3"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
counter = "0.5.7"
fs-err = "2.11.0"
serde_json = "1.0.113"
